[package]
name = "advent_calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
gloo-storage = "0.3.0"
stylist = { version = "0.13.0", features = ["yew", "parser"] }
uuid = { version = "1.5.0", features = ["v4"] }
yew = { verson = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
