[package]
name = "advent_calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
gloo-net = "0.4.0"
gloo-storage = "0.3.0"
serde = { version = "1.0.192", features = ["derive"] }
stylist = { version = "0.13.0", features = ["yew", "parser"] }
uuid = { version = "1.5.0", features = ["v4"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.38"
web-sys = "0.3.66"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
yew-router = "0.18.0"
